--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "env-cmd -f env/.env.dev next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,15 +12,24 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.3.4",
     "@mui/material": "^5.15.15",
     "@mui/material-nextjs": "^5.15.11",
+    "@tanstack/react-query": "^5.29.2",
+    "axios": "^1.6.8",
     "next": "14.2.2",
     "next-nprogress-bar": "^2.3.11",
+    "query-string": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
     "react-modal": "^3.16.1",
-    "recoil": "^0.7.7"
+    "react-query": "^3.39.3",
+    "react-spinners": "^0.13.8",
+    "recoil": "^0.7.7",
+    "sass": "^1.75.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
